arc: bluetooth: Always acquire a NotifySession

If Arc++ needs to keep receiving notifications it needs to
unconditionally acquire a NotifySession. The Bluetooth API
uses a ref-counting model to write to the descriptor. If
other clients drop their NotifySessions, notifications will stop.

BUG=632476
TEST=Build

Review-Url: https://codereview.chromium.org/2189183002
Cr-Commit-Position: refs/heads/master@{#408692}