components/arc/bluetooth/arc_bluetooth_bridge.cc
@@ -1100,11 +1100,6 @@ void ArcBluetoothBridge::RegisterForGattNotification(
     return;
   }
 
-  if (characteristic->IsNotifying()) {
-    callback.Run(mojom::BluetoothGattStatus::GATT_SUCCESS);
-    return;
-  }
-
   characteristic->StartNotifySession(
       base::Bind(&ArcBluetoothBridge::OnGattNotifyStartDone,
                  weak_factory_.GetWeakPtr(), callback,
@@ -1124,11 +1119,6 @@ void ArcBluetoothBridge::DeregisterForGattNotification(
 
   if (!characteristic) {
     LOG(WARNING) << __func__ << " Characteristic is not existed.";
-    return;
-  }
-
-  if (!characteristic->IsNotifying()) {
-    callback.Run(mojom::BluetoothGattStatus::GATT_SUCCESS);
     return;
   }
 
